[metadata]
name = pylint_flask_sqlalchemy
version = attr:pylint_flask_sqlalchemy.VERSION
author = herrboyer
author-email = rboyer@anybox.fr
maintainer = Renaud Boyer
maintainer-email = rboyer@anybox.fr
home-page = https://github.com/anybox/pylint_flask_sqlalchemy
project_urls = 
	Bug Tracker = https://github.com/anybox/pylint_flask_sqlalchemy/issues
	Documentation = https://github.com/anybox/pylint_flask_sqlalchemy
	Source Code = https://github.com/anybox/pylint_flask_sqlalchemy
description = A Pylint plugin to improve static code analysis of Flask-SQLAlchemy based projects
long-description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL
platform = any
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	License :: OSI Approved :: GNU General Public License (GPL)
	Typing :: Typed

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.5
packages = find:
setup_requires = 
	setuptools
	astroid
install_requires = 
	pylint
	Flask-SQLAlchemy>=2
tests_require = 
	pytest

[options.extras_require]
dev = 
	black
	bump2version
	gitchangelog
	pystache
	mypy

[aliases]
test = pytest

[tool:pytest]
addopts = 
	--capture=sys
	--junitxml=report.xml

[mypy]
warn_unused_configs = True
ignore_missing_imports = True
warn_unused_ignores = True
