[metadata]
name = pylint_flask_sqlalchemy
version = attr:pylint_flask_sqlalchemy.VERSION
author = herrboyer
author_email = rboyer@anybox.fr
maintainer = Renaud Boyer
maintainer_email = rboyer@anybox.fr
home_page = https://github.com/anybox/pylint_flask_sqlalchemy
project_urls = 
	Bug Tracker = https://github.com/anybox/pylint_flask_sqlalchemy/issues
	Documentation = https://github.com/anybox/pylint_flask_sqlalchemy
	Source Code = https://github.com/anybox/pylint_flask_sqlalchemy
description = A Pylint plugin to improve static code analysis of Flask-SQLAlchemy based projects
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT
platform = any
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
	License :: OSI Approved :: MIT License
	Typing :: Typed
	Framework :: Flask

[options]
zip_safe = false
packages = pylint_flask_sqlalchemy
include_package_data = true
python_requires = >= 3.6
install_requires = 
	pylint
	sqlalchemy
	Flask-SQLAlchemy

[options.extras_require]
dev = 
	black
	mypy
	pytest
	pytest-xdist[psutil]

[tool:pytest]
addopts = 
	-n auto

[mypy]
warn_unused_configs = True
ignore_missing_imports = True
warn_unused_ignores = True

[pylint.'MESSAGES CONTROL']
disable =
    missing-docstring,
    too-few-public-methods,
    no-self-use,
    import-outside-toplevel,
    unused-argument